Crash in [@ shutdownhang | RtlpWaitOnAddressWithTimeout | RtlpWaitOnAddress | RtlpWaitOnCriticalSection | RtlpEnterCriticalSectionContended | RtlEnterCriticalSection | google_breakpad::ExceptionHandler::~ExceptionHandler]
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
People
(Reporter: aryx, Assigned: gsvelto)
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr115+
|
Details | Review |
This crash signature existed before but with Firefox 120.0 and 120.0.1 it got more frequent. More than 3000 crashes at this point than 1500 over the whole release cycle for previous versions. All reports for Windows 10, none for Windows 11.
Crash report: https://crash-stats.mozilla.org/report/index/ac6e0756-033a-4175-8a65-221d90231207
MOZ_CRASH Reason: Shutdown hanging at step CCPostLastCycleCollection. Something is blocking the main-thread.
Top 10 frames of crashing thread:
0 ntdll.dll ZwWaitForAlertByThreadId
1 ntdll.dll RtlpWaitOnAddressWithTimeout
2 ntdll.dll RtlpWaitOnAddress
3 ntdll.dll RtlpWaitOnCriticalSection
4 ntdll.dll RtlpEnterCriticalSectionContended
5 ntdll.dll RtlEnterCriticalSection
6 xul.dll google_breakpad::ExceptionHandler::~ExceptionHandler toolkit/crashreporter/breakpad-client/windows/handler/exception_handler.cc:311
7 xul.dll CrashReporter::UnsetExceptionHandler toolkit/crashreporter/nsExceptionHandler.cpp:2315
8 xul.dll XREMain::XRE_main::<lambda_3>::operator const toolkit/xre/nsAppRunner.cpp:5842
8 xul.dll mozilla::ScopeExit<`lambda at /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:5840:46'>::~ScopeExit mfbt/ScopeExit.h:106
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Toolkit::Crash Reporting' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•2 years ago
|
||
The bug is linked to a topcrash signature, which matches the following criteria:
- Top 20 desktop browser crashes on release
- Top 20 desktop browser crashes on beta
For more information, please visit BugBot documentation.
Comment 3•2 years ago
|
||
The severity field is not set for this bug.
:gsvelto, could you have a look please?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 4•2 years ago
|
||
The signature here is specific to certain versions of Windows. The volume is very large and frankly this isn't normal, I'm looking into this.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 5•2 years ago
|
||
IIUC what's happening here is that shutdown is taking a while, the hang terminator tries to kill Firefox which triggers a minidump generation. As we generate the minidump the main thread moves ahead until it gets stuck trying to remove the exception handler - that's because we've entered it to generate the minidump. Ultimately these crashes end up only annoying the users, as Firefox would have shut down cleanly anyway.
One possible solution would be to not launch the crash reporter client if isSafeToDump has been set to false, because that indicates that we were already in the process of removing the exception handler.
| Assignee | ||
Comment 6•2 years ago
|
||
Comment 8•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Comment 9•2 years ago
|
||
The patch landed in nightly and beta is affected.
:gsvelto, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox122towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•2 years ago
|
Comment 10•2 years ago
|
||
This grafts cleanly and seems worth taking on ESR. Given that gsvelto is on PTO, can you please nominate if you agree, Alex? Thanks!
| Assignee | ||
Comment 11•2 years ago
|
||
Comment on attachment 9372006 [details]
Bug 1868772 - Do not launch the crash reporter client if we've already removed the exception handler r=afranchuk
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: This will remove a certain number of useless crash reports submitted from ESR users.
- User impact if declined: Sometimes users will see the crash reporter pop up when they quit Firefox. What's being reported isn't a real crash but we're still prompting the user about it.
- Fix Landed on Version: 123
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change has been in nightly/beta for a while without any particular problems. It applies cleanly to ESR.
Comment 12•2 years ago
|
||
Comment on attachment 9372006 [details]
Bug 1868772 - Do not launch the crash reporter client if we've already removed the exception handler r=afranchuk
Approved for 115.8esr.
Updated•2 years ago
|
Comment 13•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Description
•