Bug 1868772 - Do not launch the crash reporter client if we've already removed the exception handler r=afranchuk

Differential Revision: https://phabricator.services.mozilla.com/D198158