toolkit/crashreporter/nsExceptionHandler.cpp
@@ -1588,21 +1588,20 @@ bool MinidumpCallback(
     WriteAnnotationsForMainProcessCrash(apiData, addrInfo, crashTime);
   }
 
-  if (!doReport) {
-#ifdef XP_WIN
-    TerminateProcess(GetCurrentProcess(), 1);
-#endif  // XP_WIN
-    return returnValue;
+  if (doReport && isSafeToDump) {
+    // We launch the crash reporter client/dialog only if we've been explicitly
+    // asked to report crashes and if we weren't already trying to unset the
+    // exception handler (which is indicated by isSafeToDump being false).
+#if defined(MOZ_WIDGET_ANDROID)  // Android
+    returnValue =
+        LaunchCrashHandlerService(crashReporterPath.c_str(), minidumpPath);
+#else  // Windows, Mac, Linux, etc...
+    returnValue = LaunchProgram(crashReporterPath.c_str(), minidumpPath);
+#endif
   }
 
-#if defined(MOZ_WIDGET_ANDROID)  // Android
-  returnValue =
-      LaunchCrashHandlerService(crashReporterPath.c_str(), minidumpPath);
-#else  // Windows, Mac, Linux, etc...
-  returnValue = LaunchProgram(crashReporterPath.c_str(), minidumpPath);
-#  ifdef XP_WIN
+#ifdef XP_WIN
   TerminateProcess(GetCurrentProcess(), 1);
-#  endif
 #endif
 
   return returnValue;
